--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
   },
   "dependencies": {
     "airbnb-prop-types": "^2.10.0",
+    "classnames": "^2.2.5",
     "consolidated-events": "^1.1.1 || ^2.0.0",
     "is-touch-device": "^1.0.1",
     "lodash": "^4.1.1",
